feat: Configuration Docker